# shared_types

./: Cargo.toml  README.md
src/: lib.rs  telegram.rs  telegram_queue_message.rs
